--- a/src/Template.API/Template.API.csproj
+++ b/src/Template.API/Template.API.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.4.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
@@ -19,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Endpoints\"/>
+      <ProjectReference Include="..\Template.Application\Template.Application.csproj" />
     </ItemGroup>
 
 </Project>
